# FedRAMP-Moderate-DoD-IL4-Gap-Scanner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fedramp_il4_scanner/: __init__.py  __main__.py  analyzer.py  audit.py  cli.py  scanner.py  storage.py  validation.py
mappings/: fedramp_il4.json
sample_ssp/: sample_fedramp_ssp.json
src/: processing.py
tests/: conftest.py  test_analyzer.py  test_audit.py  test_cli.py  test_integration.py  test_scanner.py  test_storage.py  test_validation.py
